<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:layout_marginTop="25dp" />


        <EditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_date"
            android:inputType="text"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority"
            android:inputType="number"
            android:layout_marginTop="12dp" />

        <CheckBox
            android:id="@+id/cbDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginTop="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
